--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -7,7 +7,7 @@ I have investigated state-of-the-art (SOTA) LLM-based Recommender Systems, with 
 
 Building upon the findings of this study, I have enhanced the framework to seamlessly incorporate multi-modal data like item images. Instead of a single item encoder trained by matching loss with item text description encoder, I have implemented cross attention mechanism and contrastive learning to effectively integrate the multi-modality between item embeddings and meta data embeddings. These new integrated item encoder have produced better embeddings for soft prompt in LLM recommendation tasks. <br/><br/>
 
-Throughout this research, I have written a [Survey paper on Modern Recommender Systems:Collaborative Filtering to LLM-based Recommender System](../files/A_Survey_on_Modern_Recommender_Systems.pdf). 
+Throughout this research, I wrote a [Survey paper on Modern Recommender Systems: Collaborative Filtering to LLM-based Recommender System](../files/A_Survey_on_Modern_Recommender_Systems.pdf). 
 "
 collection: portfolio
 ---
