--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,4 +1,5 @@
 ---
+name: "project2"
 title: "Integrating Multi-Modality in All-round LLM-based Recommender System"
 excerpt: "<img src='/images/stage1_framework_multillmrec.png' style='width: 400px; height: auto;'><img src='/images/overall_framework_multillmrec.png' style='width: 400px; height: auto;'>
 <br/><br/>
